# mongfontbuilder

./: .gitignore  CONTRIBUTING.md  README.md  astro.config.ts  build.py  mongolian-utn.code-workspace  package-lock.json  package.json  parse.py  pyproject.toml  test.py
.github/workflows/: pypi.yml  test.yml
data/: README.md  aliases.ts  categories.ts  eac_test.js  export.ts  glyphs.yaml  index.ts  letters.ts  ligatures.ts  locales.ts  misc.ts  nominal.yaml  noto.yaml  particle.ts  particles.ts  transform.ts  variants.ts  writtenUnits.ts
data/glyphs/: bases.yaml  empty.yaml  format-controls.yaml  marks.yaml
data/manchu/: characters.yaml
data/manchu-ag/: characters.yaml
data/todo/: categorization.yaml
data/todo-ag/: categorization.yaml
docs/: .gitignore  HudumLetters.svelte  HudumWrittenUnits.svelte  LetterTable.svelte  LetterVariant.svelte  README.md  WrittenUnitTable.svelte  WrittenUnitVariant.svelte  architecture.mdx  astro.config.ts  comparison.mdx  data.ts  hudum-ag.mdx  hudum-ali-gali.mdx  hudum.mdx  index.html  manchu-ag.mdx  manchu-ali-gali.mdx  manchu.mdx  package-lock.json  package.json  sibe.mdx  todo-ag.mdx  todo-ali-gali.mdx  todo.mdx
docs/lib/: ConditionTable.svelte  (+6 more)
lab/: source.yaml
mongFontBuilder/: __init__.py
mongfontbuilder/: __init__.py  parse.py
mongfonttester/: core_test.py  eac_test.py  test.py
otl/: data.py  otl.py
references/: README.md  eac_test.json  xunifont_rulewords_man.json  xunifont_rulewords_sibe.json  xunifont_rulewords_todo.json
site/: README.md  data.ts  package-lock.json  package.json  svelte.config.js
templates/: hudum.fea  hudum.glyphs  manchu.fea  manchu.glyphs  update.py
tests/: __init__.py  build.py  conftest.py  core.py  eac.py  fea.py  fixtures.py  input.py  main.py  name.py  otl.py  test_MNG.py  test_font_MCH.py  test_font_SIB.py  test_module.py  test_mongfontbuilder.py  test_shaping.py  test_templates.py  utils.py
tooling/: build.py
utils/: __init__.py  core_test.py  eac_test.py
utn/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  svelte.config.js
(+751 files in other folders)
