[tool.poetry]
name = "mongfontbuilder"
version = "0.2.0"
description = ""
authors = [
    "Kushim Jiang <kushim_jiang@outlook.com>",
    "Liang Hai <lianghai@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
fontmake = "^3.7.1"
PyYaml = "^6.0.1"
unicodedata2 = "^15.1.0"
tptq-feacomposer = { git = "https://github.com/typotheque/feacomposer", branch = "main" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
